--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link rel="stylesheet" href="./public/styles/index.css">
+  <link rel="stylesheet" href="./src/styles/index.css">
   <title>Frontend Mentor | Age calculator app</title>
 </head>
 <body>
@@ -54,7 +54,7 @@
     Coded by <a href="#">Your Name Here</a>.-->
   </div>
 </body>
-<script src="./public/javascript/index.js"></script>
+<script src="./src/javascript/index.js"></script>
 </html>
 
 <!--Day
